fix(frontend/styles): unnecessary <p> margins when first or last child

--- a/frontend/app/styles.css
+++ b/frontend/app/styles.css
@@ -106,3 +106,11 @@ tr:nth-of-type(even) {
 .card-error {
 	background-color: #660000;
 }
+
+p:first-child {
+	margin-top: 0;
+}
+
+p:last-child {
+	margin-bottom: 0;
+}
